<resources>
    <string name="app_name">MoviesRating</string>
    <string name="title_activity_main">Movie Rating</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_movie">Search Movies</string>
    <string name="search_tv">Search TvSeries</string>
    <string name="search_person">Search Person</string>
    <string name="txt_search_movie">Search Your Movie</string>
    <string name="txt_search_tv">Search TV Series</string>
    <string name="txt_search_person">Search For Celebrity</string>
    <string name="drawer_search_movies">Search Movies</string>
    <string name="drawer_upcoming">Upcoming</string>
    <string name="drawer_top_rated">Top Rated</string>
    <string name="drawer_popular">Popular</string>
    <string name="drawer_now_playing">Now Playing</string>
</resources>
