<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/upcoming"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_upcoming" />
        <item
            android:id="@+id/top_rated"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_top_rated" />
        <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_popular" />
        <item
            android:id="@+id/now_playing"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_now_playing" />
    </group>

    <item android:title="Communicate">
        //problem with color change of icon??
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_search_movies"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/drawer_search_movies" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="to be" />
        </group>
    </item>

</menu>
